staging/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    stack: app2-stg
    app: app2-stg
  name: app2-stg
  namespace: argocd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app2-stg
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app2-stg
      annotations:
        counter: "1"
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: webserver
        resources:	
          requests:	
            memory: "500Mi"	
            cpu: "80m"	
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: localhost
            - name: X-Forwarded-Proto
              value: http
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: Host
              value: localhost
            - name: X-Forwarded-Proto
              value: http
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: "app2-stg"
  namespace: "argocd"
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "app2-stg"
